--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <div class="row bg-grey">
                   <div class="col-4 shoppe-row"><img src="./canon.png" class="canon" title="Pillages 0.33 GPS"></div>
                   <div class="col-8 shoppe-row"><button class="invisible btn btn-dark" id="buy-canon"
-                      onclick="buyCanon()">Buy Canon</button></div>
+                      onclick="buyAuto('canon')">Buy Canon</button></div>
                   <div class="col-12 text-center"><span id="canon-cost" class="pl-2">Cost: 25<img src="./gold-coin.png"
                         class="shoppe-gold"></span></div>
                 </div>
@@ -97,7 +97,7 @@
                       title="Pillagess 1.5 GPS">
                   </div>
                   <div class="col-8 shoppe-row"><button class="invisible btn btn-dark" id="buy-maiden"
-                      onclick="buyMaiden()">Buy Maiden</button></div>
+                      onclick="buyAuto('maiden')">Buy Maiden</button></div>
                   <div class="col-12 text-center"><span id="maiden-cost" class="pl-2">Cost: 125<img
                         src="./gold-coin.png" class="shoppe-gold"></span></div>
                 </div>
@@ -119,7 +119,7 @@
                   <div class="col-4 shoppe-row"><img src="./pirate-ship-1.png" class="pirate-ship"
                       title="Pillages 10 GPS"></div>
                   <div class="col-8 shoppe-row"><button class="invisible btn btn-dark" id="buy-ship"
-                      onclick="buyShip()">Buy Ship</button></div>
+                      onclick="buyAuto('ship')">Buy Ship</button></div>
                   <div class="col-12 text-center"><span id="ship-cost" class="pl-2">Cost: 750<img src="./gold-coin.png"
                         class="shoppe-gold"></span></div>
                 </div>
