save game added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <div class="col-12 col-md-7">
         <div class="row">
-          <div class="col-12 col-md-6 card scrolling">
+          <div class="col-12 col-md-6 card scrolling bg-danger">
             <h3 class="text-center">Arsenal</h3>
             <div class="row">
               <div class="col-6 shoppe-row" id="parrot">
