--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <h2>0</h2>
             </span>
           </div>
-          <div class="col-12 text-center island-button" onclick="pillageIsland()">
+          <div class="col-12 text-center" onclick="pillageIsland()">
             <img src="./treasure-island.jpg" alt="pirate ship" id="treasure-island" class="island" title="Pillage!">
           </div>
         </div>
@@ -39,8 +39,8 @@
 
       <div class="col-12 col-md-7">
         <div class="row">
-          <div class="col-12 col-md-6 card scrolling bg-danger">
-            <h3 class="text-center">Arsenal</h3>
+          <div class="col-12 col-md-6 card scrolling">
+            <h3 class="text-center text-danger">Arsenal</h3>
             <div class="row">
               <div class="col-6 shoppe-row" id="parrot">
                 <img src="./parrot.png" id="parrot-image" class="parrot invisible p-1">
