--- a/index.html
+++ b/index.html
@@ -34,6 +34,45 @@
           <div class="col-12 text-center" onclick="pillageIsland()">
             <img src="./treasure-island.jpg" alt="pirate ship" id="treasure-island" class="island" title="Pillage!">
           </div>
+          <div class="col-12 text-center p-3">
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#exampleModal">
+              Achievements!
+            </button>
+
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+              aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class=" text-center p-2">
+                    <h5 class="text-danger" id="exampleModalLabel">Achievements!
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+                    <div id="canon-1" class="card p-1">Buy 5 Canons!</div>
+                    <div id="canon-2" class="card p-1">Buy 10 Canons!</div>
+                    <div id="maiden-1" class="card p-1">Buy 5 Pirate Maidens!</div>
+                    <div id="gold-1" class="card p-1">Collect 500 Gold!</div>
+                    <div id="maiden-2" class="card p-1">Buy 10 Pirate Maidens!</div>
+                    <div id="gold-2" class="card p-1">Collect 1000 Gold!</div>
+                    <div id="ship-1" class="card p-1">Buy 5 Pirate Ships!</div>
+                    <div id="gold-3" class="card p-1">Collect 15,000 Gold!</div>
+                    <div id="ship-2" class="card p-1">Buy 10 Pirate Ships!</div>
+                    <div id="octopus-1" class="card p-1">Buy 2 Angry Octopuses!</div>
+                    <div id="gold-4" class="card p-1">Collect 50,000 Gold!</div>
+                    <div id="gold-5" class="card p-1">Collect 100,000 Gold!</div>
+                    <div id="octopus-2" class="card p-1">Buy 5 Angry Octopuses!</div>
+                    <div id="gold-6" class="card p-1">Collect 1,000,000 Gold!</div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
