updated wording on achievements

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
                     <div id="canon-1" class="card p-1">Buy 5 Canons!</div>
                     <div id="canon-2" class="card p-1">Buy 10 Canons!</div>
                     <div id="maiden-1" class="card p-1">Buy 5 Pirate Maidens!</div>
-                    <div id="gold-1" class="card p-1">Collect 500 Gold!</div>
+                    <div id="gold-1" class="card p-1">Pillage 500 Gold!</div>
                     <div id="maiden-2" class="card p-1">Buy 10 Pirate Maidens!</div>
-                    <div id="gold-2" class="card p-1">Collect 1000 Gold!</div>
+                    <div id="gold-2" class="card p-1">Pillage 1000 Gold!</div>
                     <div id="ship-1" class="card p-1">Buy 5 Pirate Ships!</div>
-                    <div id="gold-3" class="card p-1">Collect 15,000 Gold!</div>
+                    <div id="gold-3" class="card p-1">Pillage 15,000 Gold!</div>
                     <div id="ship-2" class="card p-1">Buy 10 Pirate Ships!</div>
                     <div id="octopus-1" class="card p-1">Buy 2 Angry Octopuses!</div>
-                    <div id="gold-4" class="card p-1">Collect 50,000 Gold!</div>
-                    <div id="gold-5" class="card p-1">Collect 100,000 Gold!</div>
+                    <div id="gold-4" class="card p-1">Pillage 50,000 Gold!</div>
+                    <div id="gold-5" class="card p-1">Pillage 100,000 Gold!</div>
                     <div id="octopus-2" class="card p-1">Buy 5 Angry Octopuses!</div>
-                    <div id="gold-6" class="card p-1">Collect 1,000,000 Gold!</div>
+                    <div id="gold-6" class="card p-1">Pillage 1,000,000 Gold!</div>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
