--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
   </main>
 
   <footer class="container-fluid bg-dark text-white text-center">
-    <div class="row justify-content-center p-3">
+    <div class="row p-3">
       <div class="col-12">
         <h4>Built With Love by</h4>
         <h4 class="text-danger mb-0">Kristina Todd</h4>
