--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
   </main>
 
-  <footer class="container-fluid bg-dark text-white text-center fixed-bottom">
+  <footer class="container-fluid bg-dark text-white text-center ">
     <div class="row p-3">
       <div class="col-12">
         <h4>Built With Love by</h4>
