home page update

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
   <main class="container-fluid">
 
-    <section class="row card" id="home-page">
+    <section class="row" id="home-page">
       <div class="col-12 text-center">
         <h2>Welcome Captain!</h2>
       </div>
-      <div class="col-3"></div>
-      <div class="col-5 card text-center">
+      <div class="col-2"></div>
+      <div class="col-8 text-center flex-column justify-content-center">
         <img src="./octopus.png" height="200vh" width="200vw">
         <h4>Pillage the island for gold!</h4>
         <h5>As your gold stash grows, buy from the Shoppe to add to your arsenal. Each item you buy can help you
@@ -44,10 +44,10 @@
             </label>
             <input type="text" name="captainName" required>
           </div>
-          <button type="submit" class="btn btn-dark" id="play-game">Aye! Let's Pillage!</button>
+          <button type="submit" class="btn btn-dark m-2" id="play-game">Aye! Let's Pillage!</button>
         </form>
       </div>
-      <div class="col-3"></div>
+      <div class="col-2"></div>
     </section>
 
     <section class="row hidden" id="game-board">
